<resources>
    <string name="app_name">Send to Phone</string>
    Toasts
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="added_to_clipboard">Copied to clipboard!</string>
    <string name="delete_message_toast">Message deleted!</string>
    <string name="delete_all_toast">All messages deleted!</string>
    <string name="save_draft_toast">Message saved to drafts!</string>
    <string name="save_draft_error_toast">Message is too short!</string>
    <string name="device_register_error_toast">There was an issue sending to this device. Make sure that the app is installed on the device and then try refreshing the device list from the extension.</string>
    <string name="unknown_send_error_toast">Unable to send. Please try again later.</string>
    <string name="send_success_toast">Message successfully sent!</string>
    DB Keys
    <string name="messages_key">message</string>
    <string name="selected_message_key">selectedMessage</string>
    <string name="device_name_key">deviceName</string>
    <string name="fcm_token_key">fcmToken</string>
    <string name="selected_message_position">selectedMessagePosition</string>
    <string name="outgoing_message_key">messagetosend</string>
    Actions
    <string name="action_delete">Delete message</string>
    <string name="action_delete_all">Delete all messages</string>
    <string name="action_save">Save draft</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_copy">Copy to clipboard</string>
    <string name="action_sort">Sort received messages</string>
    <string name="action_launch_rec">Received</string>
    <string name="action_launch_sent">Sent messages</string>
    <string name="action_launch_drafts">Drafts</string>
    Cloud messaging
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="fcm_message">New messaged received</string>
    Application keys
    <string name="preference_file_key">com.stp.sendtophone.PREFERENCE_KEY</string>
    <string name="preference_messages_key">pref_messages</string>
    <string name="preference_history_key">pref_history</string>
    <string name="preference_drafts_key">pref_drafts</string>
    <string name="preference_device_map_key">pref_device_list</string>
    <string name="preference_default_device_key">pref_default_device</string>
    <string name="draft">Draft</string>
    Dialog strings
    <string name="confirm_deletion_alert">Confirm Deletion</string>
    <string name="delete_all_alert">Are you sure you want to delete all messages?</string>
    <string name="delete_one_alert">Are you sure you want to delete this message?</string>
    <string name="continue_dialog_button">Continue</string>
    <string name="cancel_dialog_button">Cancel</string>
    <string name="confirm_account_alert">Confirm Account Deletion</string>
    <string name="delete_account_alert">Are you sure you want to delete this device? This will delete all incoming messages and prevent your device from appearing on other devices.</string>

    <string name="login_button">Log in</string>
    <string name="send_message_button">Send</string>
</resources>