<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort_list"
        android:icon="@drawable/ic_sort_holo_light"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_launch_rec"
        android:title="@string/action_launch_rec"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_launch_drafts"
        android:title="@string/action_launch_drafts"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_all"
        android:title="@string/action_delete_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_holo_dark"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>